<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dogorcat.qianzhang.com.dogorcat.MainActivity"
    android:background="#ffdd1032">

    <ScrollView
        android:background="#ffeeeade"
        android:layout_marginTop="34dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/scrollView"
        android:layout_width="320dp"
        android:layout_height="400dp">
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/choice_title"

                android:padding="10dp"
                android:paddingBottom="20dp"/>
            <RadioGroup
                android:layout_centerHorizontal="true"
                android:id="@+id/radioGroupId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/noButtonId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/no_title" />
                <RadioButton
                    android:text="@string/yes_title"
                    android:id="@+id/yesButtonId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false" />

            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/seekBar_title"
                android:padding="10dp" />

            <SeekBar
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/seekBarId"
                android:max="10"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/show_title"
                android:id="@+id/textView3"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toggle_title"
                android:padding="10dp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dog_title"
                android:id="@+id/dogId"

                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat_title"
                android:id="@+id/catId"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parrot_title"
                android:id="@+id/parrotId"
                android:paddingBottom="20dp"
                android:checked="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_title1"
                />
            <RadioGroup
                android:id="@+id/radoiGroupDrool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/noId"
                    android:text="@string/no_title"
                    android:checked="false" />
                <RadioButton
                    android:text="@string/yes_title"
                    android:id="@+id/yesId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_title"
        android:id="@+id/button"
        android:layout_below="@+id/scrollView"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
